Update 4 metro error.ipynb

--- a/4 metro error.ipynb
+++ b/4 metro error.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import numpy as np(model dosnt synchronise , even with feedback linerrzation control)\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.integrate import solve_ivp\n",
     "import random\n",
